--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello</h1>
-    <p>hello</p>
+    <script src="./main.js"></script>
 </body>
 </html>
